// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency type snapshot test 1`] = `
<span
  className="text-muted"
>
  -
</span>
`;

exports[`Currency type snapshot test 2`] = `
<span>
  $254,789,043.00
</span>
`;

exports[`Currency type snapshot test 3`] = `
<span>
  $4,672,389.00
</span>
`;
